--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "api": "node server/api.js",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node index.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.97.0",
